tests/topvar_infer_null_unused_bad.stderr
tests/topvar_infer_null_unused_bad.hop:2:9: error: HOP2026: cannot infer type from null; add explicit type
