tests/topvar_infer_null_unused_bad.hop
// Verifies topvar inference null unused is rejected.
var V = null

fn main() {}
